# telebox

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
telebox/: __init__.py  errors.py  typing.py  utils.py
telebox/bot/: __init__.py  bot.py  context.py  converters.py  errors.py  serializer.py
telebox/bot/consts/: background_fill_types.py  background_types.py  encrypted_passport_element_types.py  input_paid_media_types.py  language_codes.py  message_entity_types.py  paid_media_types.py  reaction_types.py  sticker_types.py  transaction_partner_types.py  update_types.py  withdrawal_state_types.py
telebox/bot/enums/: __init__.py  input_file_type.py  message_content_type.py  update_content_type.py
telebox/bot/types/: __init__.py  type.py
telebox/bot/utils/: __init__.py  converters.py  ids.py  users.py  utils.py  web_apps.py
telebox/context/: __init__.py  bot.py  errors.py  state_machine.py  telegram_bot.py  utils.py  vars.py
telebox/dispatcher/: __init__.py  dispatcher.py  double_ended_queue.py  errors.py  event_queue.py  rate_limiter.py  server_root.py  thread_pool.py  typing.py
telebox/dispatcher/enums/: __init__.py  event_type.py  media_group_content_type.py  processing_status.py
telebox/dispatcher/filters/: __init__.py  base.py  base_error.py  base_event.py  error_filter.py  event_filter.py  filter.py
telebox/dispatcher/handlers/: __init__.py  base.py  error.py  event.py  manager.py
telebox/dispatcher/middlewares/: __init__.py  exceptions.py  (+1 more)
telebox/state_machine/: __init__.py  context.py  errors.py  machine.py  magazine.py  manager.py  state.py  state_machine.py  state_magazine.py  state_manager.py  transition_scheme.py
telebox/telegram/: errors.py  request_timeout.py  serialization.py  telegram.py  utils.py
telebox/telegram_bot/: __init__.py  bot.py  errors.py  serialization.py  serializer.py  telegram_bot.py  utils.py
telebox/utils/: __init__.py  console_scripts.py  group.py  named_set.py  not_set.py  serialization.py  signals.py  task_executor.py  text.py  thread_pool.py
tests/: conftest.py
tests/state_machine/: conftest.py
(+746 files in other folders)
